--- a/static/index.html
+++ b/static/index.html
@@ -123,8 +123,10 @@ function getPosition(e) {
 
 function addEntity(entity, data) {
     world[entity] = data;
-    drawNextFrame(); // (but should we?)
-    //XXX: Send a XHTML Request that updates the entity you just modified!
+
+    var msg = {};
+    msg[entity] = data;
+    socket.send(JSON.stringify(msg));
 }
 var counter = 0;
 function addEntityWithoutName(data) {
@@ -261,7 +263,14 @@ function wsSetup() {
     socket.onmessage = function(msg) {  
         try {
             debug("WebSocket Recv:" + msg.data);
-            //XXX: TODO What are you going to do here?            
+
+            var updates = JSON.parse(msg.data);
+
+            for (var key in updates) {
+                world[key] = updates[key];
+            }
+
+            drawNextFrame();
         } catch (e) {
             alert("socket on message: " + e);
         }
